<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer"
    app:startDestination="@id/menu_movies">

    <fragment
        android:id="@+id/menu_movies"
        android:name="com.adasoraninda.mymoviedb.presentation.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_about"
        android:name="com.adasoraninda.mymoviedb.presentation.about.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/menu_watchlist"
        android:name="com.adasoraninda.mymoviedb.presentation.watchlist.WatchlistFragment"
        android:label="@string/watchlist_title"
        tools:layout="@layout/fragment_watchlist" />

    <include app:graph="@navigation/nav_detail" />

</navigation>