<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_app"
    app:startDestination="@id/menu_movies">

    <action
        android:id="@+id/nav_to_search_movies"
        app:destination="@id/fragment_search"
        app:launchSingleTop="true" />

    <fragment
        android:id="@+id/menu_movies"
        android:name="com.adasoraninda.mymoviedb.presentation.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/nav_to_popular_movies"
            app:destination="@id/fragment_popular"
            app:launchSingleTop="true" />

        <action
            android:id="@+id/nav_to_top_rated_movies"
            app:destination="@id/fragment_top_rated"
            app:launchSingleTop="true" />

        <action
            android:id="@+id/nav_to_detail"
            app:destination="@id/fragment_detail"
            app:launchSingleTop="true" />

    </fragment>

    <fragment
        android:id="@+id/menu_about"
        android:name="com.adasoraninda.mymoviedb.presentation.about.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/menu_watchlist"
        android:name="com.adasoraninda.mymoviedb.presentation.watchlist.WatchlistFragment"
        android:label="@string/watchlist_title"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/fragment_popular"
        android:name="com.adasoraninda.mymoviedb.presentation.categories.popular.PopularFragment"
        android:label="@string/popular_title"
        tools:layout="@layout/fragment_list_movies">

        <action
            android:id="@+id/nav_to_detail"
            app:destination="@id/fragment_detail"
            app:launchSingleTop="true" />

    </fragment>

    <fragment
        android:id="@+id/fragment_top_rated"
        android:name="com.adasoraninda.mymoviedb.presentation.categories.toprated.TopRatedFragment"
        android:label="@string/top_rated_title"
        tools:layout="@layout/fragment_list_movies">

        <action
            android:id="@+id/nav_to_detail"
            app:destination="@id/fragment_detail"
            app:launchSingleTop="true" />

    </fragment>

    <fragment
        android:id="@+id/fragment_search"
        android:name="com.adasoraninda.mymoviedb.presentation.search.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/nav_to_detail"
            app:destination="@id/fragment_detail"
            app:launchSingleTop="true" />

    </fragment>

    <fragment
        android:id="@+id/fragment_detail"
        android:name="com.adasoraninda.mymoviedb.presentation.detail.DetailFragment"
        tools:layout="@layout/fragment_detail_movie">

        <action
            android:id="@+id/nav_to_detail"
            app:destination="@id/fragment_detail"
            app:launchSingleTop="true" />

        <argument
            android:name="movieId"
            android:defaultValue="-1"
            app:argType="integer" />

    </fragment>

</navigation>