<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="48dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_corner_shape_modal"
        android:layerType="software" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                tools:text="@tools:sample/lorem/random" />

            <Button
                android:id="@+id/button_watchlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check"
                android:text="@string/detail_button_watchlist"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/text_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/text_run_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="@tools:sample/lorem/random" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating_movie"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    tools:rating="4" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_rate_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="8.5" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/text_label_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_text_overview"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                tools:text="@tools:sample/lorem/random" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/text_label_recommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_text_recommendations"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/text_error_recommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:visibility="gone"
                tools:text="@tools:sample/lorem/random"
                tools:visibility="visible" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_hr_movie"
                    tools:orientation="horizontal" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_bar_recommendations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    app:trackCornerRadius="4dp" />

            </FrameLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>
